[package]
name = "node-macos-name-uuid"
version = "1.0.1"
description = "A native Node.js module to get macOS computer name and the hardware UUID"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
io-kit-sys = "0.4.1"
core-foundation = "0.10.0"